--- a/www/.htaccess
+++ b/www/.htaccess
@@ -11,5 +11,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php
 
 #RewriteCond $1 !^(index\.php|robots\.txt)
-#RewriteRule ^(.*)$ index.php/$1 [L] 
+#RewriteRule ^(.*)$ index.php/$1 [L]
+
+RewriteCond %{HTTP:X-Forwarded-Proto} =http
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 
