--- a/.htaccess
+++ b/.htaccess
@@ -13,7 +13,9 @@ RewriteRule . index.php
 #RewriteCond $1 !^(index\.php|robots\.txt)
 #RewriteRule ^(.*)$ index.php/$1 [L]
 
-RewriteCond %{HTTP:X-Forwarded-Proto} =http
-RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{HTTP_HOST} ^www\.yoursite\.com$ [NC]
+RewriteRule ^(.*)$ https://yoursite.com/$1 [L,R=301]
+
 
 
